objects/User.object
<CustomObject>
    <fields>
        <fullName>AvgCustomerSatisfaction__c</fullName>
        <formula>CEILING(TotalCustomerSatisfactionScore__c  /  NoOfCustomerServed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AvgCustomerSatisfaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Working_Day__c</fullName>
        <formula>CASE(
MOD(Working_Day__c- DATE(1900, 1, 7), 7),
0, Working_Day__c+1, /*if Working_Day__c is Sun,Working_Day__c+1=Monday */
1, Working_Day__c+1, /*if Working_Day__c is Mon,Working_Day__c+1=Tuesday */
2, Working_Day__c+1, /*if Working_Day__c is Tues,Working_Day__c+1=Wednesday */
3, Working_Day__c+1, /*if Working_Day__c is Wed,Working_Day__c+1=Thursday*/
4, Working_Day__c+1, /*if Working_Day__c is Thurs,Working_Day__c+1=Friday */
5,Working_Day__c+3, /*if Working_Day__c is Fri,Working_Day__c+3=Monday next week */
6,Working_Day__c+2, /*if Working_Day__c is Sat,Working_Day__c+2=Monday next week */
Working_Day__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NoOfCustomerServed__c</fullName>
        <label>NoOfCustomerServed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Store_Associate_Status__c</fullName>
        <label>Store Associate Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clocked In</fullName>
                </value>
                <value>
                    <fullName>Clocked Out</fullName>
                </value>
                <value>
                    <fullName>Pending Break</fullName>
                </value>
                <value>
                    <fullName>Break</fullName>
                </value>
                <value>
                    <fullName>Lunch Break</fullName>
                </value>
                <value>
                    <fullName>Off Duty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalCustomerSatisfactionScore__c</fullName>
        <label>TotalCustomerSatisfactionScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>Incident Logging</fullName>
                </value>
                <value>
                    <fullName>Dispute Resolution</fullName>
                </value>
                <value>
                    <fullName>Retail Associate - Store Floor</fullName>
                </value>
                <value>
                    <fullName>Retail Associate - Cashier</fullName>
                </value>
                <value>
                    <fullName>Retail Associate - Welcome Greeter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_Day__c</fullName>
        <label>Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignEmail__c</fullName>
        <label>DocuSign Email</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>